# novi

./: .env  .gitignore  LICENSE  Makefile  README.md  README_IMPROVED.md  etl.py  main.py  pyproject.toml  requirements.txt
input/: BottomholeLocations.csv  Production.xml  Wells.csv
src/: config.py  data_processors.py  pipeline.py  utils.py  well_spacing.py
tests/: test_utils.py
